# cpp_gamedev_course

./: .clang-format  .gitignore  LICENSE  README.md  docker-compose.yml  format.sh
00-helloworld/: CMakeLists.txt  helloworld.cpp
01-hellolib/helloapp/: CMakeLists.txt  main.cpp
01-hellolib/helloapp/hellolib/: CMakeLists.txt  hello.cpp  hello.h
02-sdl-dynamic/: CMakeLists.txt  main.cpp
02-sdl-static/: CMakeLists.txt  main.cpp
03-sdl-gameloop/: CMakeLists.txt  main.cpp
deployment/: Dockerfile  Dockerfile.build
tests/: run_tests.sh  test_helloworld.sh
